--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "微信云托管 express 框架模版",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js",
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -17,5 +18,8 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
